--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">Ai_Fortune_App</string>
+    <string name="some_id">사주 보기</string>
+    <string name="collect_star">수집하기</string>
+    <string name="daily_saju">"오늘의 사주"</string>
+    <string name="domain_saju">분야별 선택</string>
+
+    <!--카테고리 버튼-->
+    <string name="show_saju">사주 보기</string>
+    <string name="love">연애</string>
+    <string name="career">직업</string>
+    <string name="study">학업</string>
+    <string name="health">건강</string>
+
+
+    <!--페이지별 타이틀 텍스트-->
+    <string name="input_title">당신의\n정보를\n입력해주세요</string>
+
+
+    <!--플레이스 홀더-->
+    <string name="pc_name">이름을 입력하세요</string>
+    <string name="pc_birthdate">생년월일을 입력하세요</string>
 </resources>
+
